--- a/02_presentation.tex
+++ b/02_presentation.tex
@@ -41,19 +41,19 @@
 %%%%
 
 \newcommand{\germanlipsum}{
-    Lorem ipsum ist ein pseudo-Lateinischer Text für Webdesign, 
-    Typografie, Layout und Printmedien. Er ersetzt Deutsch um Designelemente 
-    gegenüber dem Inhalt hervorzuheben, hat also die Funktion als Platzhalters 
-    in Layouts um dem Betrachter eine vorläufige Vorstellung der endgültigen Fassung 
-    zu vermitteln. Buchstaben, Worte, Wort- und Satzlängen bilden ungefähr das Schriftbild eines 
-    lateinischen Texts wieder. Latein war in früheren Jahrhunderten eine häufig 
-    genutzte Sprache verschiedener Textgattungen, z. B. wissenschaftlicher Werke, 
-    Ratgeber, oder auch der sogenannten Erbauungsliteratur. Um die Aufmerksamkeit des 
-    Lesers ausschließlich auf das Schriftbild zu lenken wird auch ein zufälliger Sinn 
+    Lorem ipsum ist ein pseudo-Lateinischer Text für Webdesign,
+    Typografie, Layout und Printmedien. Er ersetzt Deutsch um Designelemente
+    gegenüber dem Inhalt hervorzuheben, hat also die Funktion als Platzhalters
+    in Layouts um dem Betrachter eine vorläufige Vorstellung der endgültigen Fassung
+    zu vermitteln. Buchstaben, Worte, Wort- und Satzlängen bilden ungefähr das Schriftbild eines
+    lateinischen Texts wieder. Latein war in früheren Jahrhunderten eine häufig
+    genutzte Sprache verschiedener Textgattungen, z. B. wissenschaftlicher Werke,
+    Ratgeber, oder auch der sogenannten Erbauungsliteratur. Um die Aufmerksamkeit des
+    Lesers ausschließlich auf das Schriftbild zu lenken wird auch ein zufälliger Sinn
     durch Wort- oder Satzkombinationen vermieden.
 }
 \newcommand{\germanlipsumshort}{
-    Lorem ipsum ist ein pseudo-Lateinischer Text für Webdesign, 
+    Lorem ipsum ist ein pseudo-Lateinischer Text für Webdesign,
     Typografie, Layout und Printmedien.
 }
 
@@ -66,18 +66,11 @@
 
 \begin{document}
 
-\EITCoverVI{Wilkommen}{Vorname Nachname}{				
+\EITCoverVI{Wilkommen}{Vorname Nachname}{
 	Pictures/csm_HKA_FK-EIT_2017-9363_a9e6e1d039.jpg
 }
 
 \EITTableOfContent{Inhaltsverzeichnis}{2}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%% Skip this part
-\section{EIT Präsentation Layout}
-
-%%%%%%%% Skip this part
-%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{EIT Präsentation}
 
@@ -117,7 +110,7 @@
 	}
 }
 
-\EITHeadlineFT{EIT Präsentation mit ``Floating'' Text}
+\EITHeadlineFT{EIT Präsentation mit schwebendem Text}
 {
 	\placetextbox{\leftmarginpos + 3cm}{\topmargincontent - 1cm}{\columnmaxwidth}{
 		\germanlipsum
@@ -156,7 +149,7 @@
 }
 
 
-\EITHeadlineFT{EIT Präsentation mit ``Floating'' Tabelle}{
+\EITHeadlineFT{EIT Präsentation mit schwebendem Tabelle}{
 	\placetextbox{0.2\paperwidth}{-0.2\paperheight}{\maximumwidth}{
 		\begin{table}[!h]
 			\centering
